<resources>
    <string name="app_name">ECCO screens</string>
    <string name="Skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_or_register">Log in or Register to experience the app using your</string>
    <string name="Next">Next</string>
    <string name="t1">Personalise your app experience and get the best fit for your products</string>
    <string name="t2">Walk more in your ECCO footwear and get rewarded</string>
    <string name="t3">Join our loyalty program to receive special offers, priority support and much more</string>
    <string name="t4">Your’e signed in, feel free to move around like a boss!</string>
    <string name="Login">Login</string>
    <string name="email_id">Email Id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_your_account">Create your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_link_sent">Verification link Sent</string>
    <string name="verification_description">Thanks for submitting your email address. A verification link has been sent on the Email ID: alisha.nasim@appinventiv.com with the information needed to reset your password. The email might take a couple of minutes to reach your account. Please check your junk mail to ensure you receive it.</string>
    <string name="resend_link">Resend Link</string>
    <string name="sec_60">00:60</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password_description">Reset your password and access your account just anytime</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_limits">Use a minimum of 12 characters, including uppercase letter, lowercase letters and numbers.</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="fret_not_reset_your_password_in_a_single_click">Fret not! reset your password in a single click!</string>
    <string name="please_provide_your_basic_details">Please provide your basic details</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="shoe_size">Shoe Size</string>


    <string-array name="feelings">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
</resources>