<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetPassword.PasswordVerificationLinkFragment">

<!--    Guideline-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

<!--   eng -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_verification_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verification_link_sent"
        android:fontFamily="@font/mulish_light"
        android:textSize="32sp"
        android:textColor="#111111"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_verification_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verification_description"
        android:fontFamily="@font/mulish_regular"
        android:textSize="14sp"
        android:textColor="@color/color_757575"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_header"
        android:layout_marginTop="20dp"
        />
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/si_timer"
        android:layout_width="18dp"
        android:layout_height="21dp"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/tv_show_time"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_description"
        android:layout_marginTop="43dp"
        android:src="@drawable/timer"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_show_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec_60"
        android:textColor="@color/black"
        android:fontFamily="@font/mulish_semi_bold"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/si_timer"
        app:layout_constraintTop_toTopOf="@id/si_timer"
        app:layout_constraintBottom_toBottomOf="@id/si_timer"
        android:layout_marginStart="11dp"
        />

    <!--  resend link button  -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_40"
        android:text="@string/resend_link"
        android:textAllCaps="false"
        android:enabled="false"
        android:fontFamily="@font/mulish_medium"
        android:textColor="@color/white"
        android:background="@drawable/button_state_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginEnd="@dimen/dp_3"
        android:layout_marginBottom="46dp" />

</androidx.constraintlayout.widget.ConstraintLayout>