<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetPassword.ResetPasswordFragment">

    <!--    Guideline-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <!--   eng -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_reset_password_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fret_not_reset_your_password_in_a_single_click"
        android:fontFamily="@font/mulish_light"
        android:textSize="32sp"
        android:textColor="#111111"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/tv_enter_password"
        style="@style/mulishThemeSemiBold"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_password_header"
        android:layout_marginTop="48dp"
        android:text="@string/email_id"
        />

    <!--    email login or register-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFiledTheme"
        android:id="@+id/til_enter_password"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_password"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text_curve_border"
            android:text=""

            android:maxLines="1"
            android:maxLength="50"
            android:maxEms="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/mulish_regular"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!-- submit button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_submit"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_40"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_state_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginEnd="@dimen/dp_3"
        android:layout_marginBottom="46dp" />


</androidx.constraintlayout.widget.ConstraintLayout>