<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.resetPassword.ConfirmPasswordFragment">

    <!--    Guideline-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="@dimen/dp_1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <!--   eng -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_verification_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:fontFamily="@font/mulish_light"
        android:textSize="32sp"
        android:textColor="@color/color_111111"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_verification_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_description"
        android:fontFamily="@font/mulish_regular"
        android:textSize="14sp"
        android:textColor="@color/color_757575"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_header"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_enter_password"
        style="@style/mulishThemeSemiBold"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_description"
        android:layout_marginTop="48dp"
        android:text="@string/enter_password"
        />

    <!--    email login or register-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFiledTheme"
        android:id="@+id/til_enter_password"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:passwordToggleDrawable="@drawable/toggle_password"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_password"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/editTextView"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_enter_password_show"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:src="@drawable/toggle_password"
        app:layout_constraintTop_toTopOf="@id/til_enter_password"
        app:layout_constraintEnd_toEndOf="@id/til_enter_password"
        app:layout_constraintBottom_toBottomOf="@id/til_enter_password"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        />
<!--    <com.google.android.material.imageview.ShapeableImageView-->
<!--        android:id="@+id/iv_enter_password_hide"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:src="@drawable/hide_password"-->
<!--        app:layout_constraintTop_toTopOf="@id/til_enter_password"-->
<!--        app:layout_constraintEnd_toEndOf="@id/til_enter_password"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/til_enter_password"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:visibility="gone"-->
<!--        />-->

<!--    confirm password-->
    <TextView
        android:id="@+id/tv_confirm_password"
        style="@style/mulishThemeSemiBold"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/til_enter_password"
        android:layout_marginTop="26dp"
        android:text="@string/confirm_password"
        />

    <!--    email login or register-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFiledTheme"
        android:id="@+id/til_confirm_password"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:passwordToggleDrawable="@drawable/toggle_password"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            style="@style/editTextView"
            />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.imageview.ShapeableImageView-->
<!--        android:id="@+id/iv_confirm_password_show"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:src="@drawable/show_password"-->
<!--        app:layout_constraintTop_toTopOf="@id/til_confirm_password"-->
<!--        app:layout_constraintEnd_toEndOf="@id/til_confirm_password"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/til_confirm_password"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:visibility="gone"-->
<!--        />-->
<!--    <com.google.android.material.imageview.ShapeableImageView-->
<!--        android:id="@+id/iv_confirm_password_hide"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:src="@drawable/hide_password"-->
<!--        app:layout_constraintTop_toTopOf="@id/til_confirm_password"-->
<!--        app:layout_constraintEnd_toEndOf="@id/til_confirm_password"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/til_confirm_password"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:visibility="visible"-->
<!--        />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/til_confirm_password"
        android:text="@string/password_limits"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/mulish_regular"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_sign"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_40"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_state_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        android:layout_marginEnd="@dimen/dp_3"
        android:layout_marginBottom="46dp" />




</androidx.constraintlayout.widget.ConstraintLayout>